# multi-agent-travel-planner

./: QUICKSTART.md  test_backend.py
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/agents/: requirements_graph.py  travel_system.py  travel_system_agents.py  travel_system_graph.py
backend/app/agents/prompts/: __init__.py  travel_system.py
backend/app/agents/response_models/: planning_agent.py  requirements_agent.py
backend/app/agents/tools/: planner_tools.py
backend/app/api/: requirements.py  travel_system.py
backend/app/api/models/: requirements.py  travel_system.py
backend/app/api/services/: requirements_service.py  travel_system_service.py
backend/app/core/: llm.py
frontend/: .env  .gitignore
frontend/src/components/: ChatDrawer.tsx  Navbar.tsx  QueryPlanDisplay.tsx
frontend/src/features/bookings/: MyBookingsPage.tsx  bookingsApi.ts
frontend/src/lib/: api.ts  types.ts
